sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {



  var echange= true 

  while(echange==true){
    var j=0
    for (i <- 1 to getNombreValeurs()-1){
      j=i+1
      if (!plusPetit(i,j)){
        echange(i,j)
        else
        echange= false


      }
    }
  }
}